Enhanced UI design for Todo List, resolved alignment inconsistencies, optimized page load performance, and revamped layout structure. Implemented robust input validation to ensure data integrity before task creation.

--- a/css/style.css
+++ b/css/style.css
@@ -7,15 +7,41 @@ body {
     font-size: 1em;
 }
 
-main {
-    height: 100vh;
-    background-color: aqua;
+.main {
+    min-height: 100vh;
+    background-color: #272424;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
+.button {
+    height: 32px;
+    width: 72px;
+    background-color: aqua;
+    cursor: pointer;
+}
+
+.task-field {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 200px;
+    width: 400px;
+    border-radius: 5px;
+    margin-top: 50px;
+    background-color: #E6B89C;
+}
+
+.task-field input {
+    height: 30px;
+    padding: 5px;
+    border-radius: 3px;
+}
+
 h1 {
+    color: #E6B89C;
     font-size: 3em;
 }
 
@@ -25,18 +51,30 @@ h1 {
     align-items: center;
     height: 500px;
     width: 80%;
-    background-color: rgb(178, 178, 247);
+    padding: 20px;
+    border-radius: 05px;
+    background-color: #EAD2AC;
 }
 
 .js-display {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 500px;
+    width: 90%;
+    margin-top: 100px;
     height: fit-content;
-    background-color: blueviolet;
+    border-radius: 3px;
+    background-color: #E6B89C;
 }
 
 .display-container {
     display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 50px;
+    width: 100%;
+}
+
+.task-display, .task-date {
+    width: 180px;
 }
